--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,7 +1,7 @@
-header.sticky.top-0.bg-white.border.border-b-lavender-600.pl-2.lg:pl-9.h-16
+header.sticky.top-0.bg-white.border-b.border-lavender-600.h-12.md:h-16.relative
   .flex.flex-row.h-full
     .basis-1/2.flex.items-center
-      .lg:text-2xl.font-bold.hover:text-gray-400
+      .md:text-2xl.font-bold.hover:text-gray-400.pl-1.5.md:pl-9
         - if logged_in?
           = link_to 'Word Warmup', home_path
         - else
@@ -9,8 +9,8 @@ header.sticky.top-0.bg-white.border.border-b-lavender-600.pl-2.lg:pl-9.h-16
     .basis-1/2
       .flex.justify-end.h-full
         - if logged_in?
-          .inline-block.flex.items-center.mr-10
-            div(data-vue='IncrementalSearch' class="incremental-search" )
+          .bg-white.inline-block.absolute.lg:static.top-12.md:top-16.left-0.w-full.h-11.lg:h-full.border-b.lg:border-b-0.border-lavender-600.flex.justify-center.items-center
+            div(data-vue='IncrementalSearch' class="incremental-search inline-block lg:pr-5 w-11/12 absolute top-[5.5px] bottom-[5.5px] lg:top-[15.5px]  lg:bottom-[15.5px] md:w-96")
           .account.relative
             label.inline-block.font-medium.h-full.w-36.px-2.flex.justify-center.hover:cursor-pointer.hover:bg-lavender-600.hover:text-white.border-l.flex.items-center.overflow-auto(for='header-menu')
               = current_user.name
@@ -20,5 +20,5 @@ header.sticky.top-0.bg-white.border.border-b-lavender-600.pl-2.lg:pl-9.h-16
               .left-0.top-full.absolute.text-center.z-50
                 = button_to 'Log out', logout_path, method: :delete, class: 'w-36 bg-white border py-3 rounded hover:bg-lavender-600 hover:text-white'
         - else
-          .button-on-header.flex.items-center.mr-9
-            = button_to 'Sign up/Log in with Google', '/auth/google_oauth2', method: :post, data: { turbo: false }, class: 'font-medium text-lg rounded-full bg-lavender-800 hover:bg-lavender-600 text-white px-5 py-0.5'
+          .button-on-header.flex.items-center.mr-1.md:mr-9
+            = button_to 'Sign up/Log in with Google', '/auth/google_oauth2', method: :post, data: { turbo: false }, class: 'font-medium text-sm md:text-lg rounded-full bg-lavender-800 hover:bg-lavender-600 text-white px-0.5 md:px-5 py-px md:py-0.5'
