Add responsive design to quiz

--- a/app/views/memorised_expressions/quizzes/show.html.slim
+++ b/app/views/memorised_expressions/quizzes/show.html.slim
@@ -1,2 +1,2 @@
-.bg-white.py-12.rounded-sm.max-w-800.w-full.mx-auto
+.bg-white.pt-20.pb-14.max-w-800.w-full.mx-auto
   div(data-vue='WordQuiz' data-vue-path='/api/memorised_expressions/quiz')
