--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,15 +1,17 @@
-header.sticky.top-0.bg-white.border-b.border-lavender-600.h-12.md:h-16.relative
+header class="sticky top-0 bg-white border-b border-lavender-600 relative h-[70px]"
   .flex.flex-row.h-full
     .basis-1/2.flex.items-center
-      .md:text-2xl.font-bold.hover:text-gray-400.pl-1.5.md:pl-9
+      .pl-1.5
         - if logged_in?
-          = link_to 'Word Warmup', home_path
+          = link_to home_path, class: 'logo' do
+            = image_tag 'logo.svg', alt: 'Word Warmupのロゴ'
         - else
-          = link_to 'Word Warmup', root_path
+          = link_to root_path, class: 'logo' do
+            = image_tag 'logo.svg', alt: 'Word Warmupのロゴ'
     .basis-1/2
       .flex.justify-end.h-full
         - if logged_in?
-          .bg-white.inline-block.absolute.lg:static.top-12.md:top-16.left-0.w-full.h-11.lg:h-full.border-b.lg:border-b-0.border-lavender-600.flex.justify-center.items-center
+          div class="bg-white inline-block absolute lg:static top-[70px] left-0 w-full h-11 lg:h-full border-b lg:border-b-0 border-lavender-600 flex justify-center items-center"
             div(data-vue='IncrementalSearch' class="incremental-search inline-block lg:pr-5 w-11/12 absolute top-[5.5px] bottom-[5.5px] lg:top-[15.5px]  lg:bottom-[15.5px] md:w-96")
           .account.relative
             label.inline-block.font-medium.h-full.w-36.px-2.flex.justify-center.hover:cursor-pointer.hover:bg-lavender-600.hover:text-white.border-l.flex.items-center.overflow-auto(for='header-menu')
