--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,8 @@ html
     = vite_client_tag
     = vite_javascript_tag 'application'
     = vite_stylesheet_tag 'application'
+    = favicon_link_tag
+    = favicon_link_tag 'mb-icon.png', rel: 'apple-touch-icon', type: 'image/png'
     script src="https://kit.fontawesome.com/ce82121a9a.js" crossorigin="anonymous"
   body
     = render 'shared/header'
