Fix terms of service

--- a/app/views/welcome/terms_of_service.html.slim
+++ b/app/views/welcome/terms_of_service.html.slim
@@ -70,7 +70,7 @@
     li.pb-2 前項ただし書に定める場合であっても、本サービスは、本サービスの過失（重過失を除きます。）による債務不履行または不法行為によりユーザーに生じた損害のうち特別な事情から生じた損害（本サービスまたはユーザーが損害発生につき予見し、または予見し得た場合を含みます。）について一切の責任を負いません。また、本サービスの過失（重過失を除きます。）による債務不履行または不法行為によりユーザーに生じた損害の賠償は、ユーザーから当該損害が発生した月に受領した利用料の額を上限とします。
     li 本サービスは、本サービスに関して、ユーザーと他のユーザーまたは第三者との間において生じた取引、連絡または紛争等について一切責任を負いません。
   h2.font-bold.text-lg.border-b.border-gray-300 第11条（サービス内容の変更等）
-  p.py-6 本サービスは、ユーザーへの事前の告知をこのウェブサイト上で行うことにより、本サービスの内容を変更、追加したり、本サービスの提供を終了することがあり、ユーザーはこれを承諾するものとします。また本サービスの提供を終了する場合は、これらが実行される日の１ヶ月前までに事前告知を前述のとおりこのウェブサイト上で行います。本サービスは、本サービスの内容を変更、追加、本サービスの提供を終了することによって、ユーザーに生じた損害について一切の責任を負いません。
+  p.py-6 本サービスは、ユーザーへの事前の告知をこのウェブサイト上で行うことにより、本サービスの提供を終了することがあり、ユーザーはこれを承諾するものとします。本サービスの提供を終了する場合は、１ヶ月前までに事前告知を前述のとおりこのウェブサイト上で行います。また本サービスは、ユーザーに通知することなく、本サービスの内容を変更、追加することがあり、ユーザーはこれを承諾するものとします。本サービスは、本サービスの内容を変更、追加、本サービスの提供を終了することによって、ユーザーに生じた損害について一切の責任を負いません。
   h2.font-bold.text-lg.border-b.border-gray-300 第12条（利用規約の変更）
   ol.list-decimal.list-inside.py-6
     li.pb-2 本サービスは以下の場合には、ユーザーの個別の同意を要せず、本規約を変更することができるものとします。
