--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,13 +2,14 @@ doctype html
 html
   head
     / Google tag (gtag.js)
-    script async src="https://www.googletagmanager.com/gtag/js?id=G-T7PQXXVB9Z"
-    script
-      | window.dataLayer = window.dataLayer || [];
-      | function gtag(){dataLayer.push(arguments);}
-      | gtag('js', new Date());
+    javascript:
+      async src="https://www.googletagmanager.com/gtag/js?id=G-T7PQXXVB9Z"
+    javascript:
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-      | gtag('config', 'G-T7PQXXVB9Z');
+      gtag('config', 'G-T7PQXXVB9Z');
     title
       | WordWarmup
     meta[name='viewport' content='width=device-width,initial-scale=1']
