--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -1,4 +1,4 @@
-header class="sticky top-0 bg-white border-b border-lavender-600 relative h-[70px]"
+header class="sticky top-0 bg-white border-b border-lavender-600 relative h-[70px] z-50"
   .flex.flex-row.h-full
     .basis-1/2.flex.items-center
       .pl-1.5
