--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,7 +13,7 @@ html
     = favicon_link_tag
     = favicon_link_tag 'mb-icon.png', rel: 'apple-touch-icon', type: 'image/png'
     script src="https://kit.fontawesome.com/ce82121a9a.js" crossorigin="anonymous"
-  body
+  body class='text-[#444444]'
     = render 'shared/header'
     main
       = yield
