--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -12,7 +12,7 @@
 
   div class=error_or_not(alert)
     .max-w-800.mx-auto
-      h1.font-bold.px-5.pb-14.md:pl-10.max-w-lg.text-2xl
+      h1.font-bold.px-5.pb-14.md:pl-10.max-w-lg.text-2xl.leading-9
         = t('.target')
         i class="fa-solid fa-earth-asia pr-0.5"
         i class="fa-regular fa-comments"
