--- a/app/views/bookmarked_expressions/index.html.slim
+++ b/app/views/bookmarked_expressions/index.html.slim
@@ -1,6 +1,8 @@
-.bg-white.pt-16.pb-24.max-w-800.w-full.mx-auto
+.bg-white.pt-10.pb-24.max-w-800.w-full.mx-auto
   p.text-green-700.pl-5.pb-6.font-bold
     = notice
+  h1.text-2xl.font-bold.mb-10.border-b.border-neutral-400.pl-2.mt-4
+    = t('.title')
   .mt-4
     = render 'shared/page_tabs'
   .sm:px-7.py-6.bg-lavender-600
