--- a/app/views/expressions/edit.html.slim
+++ b/app/views/expressions/edit.html.slim
@@ -1,4 +1,6 @@
 .pt-20.pb-12.lg:pt-14.max-w-800.w-full.mx-auto
+  h1.text-xl.font-bold.mb-10.border-b.border-neutral-400.pl-2
+    = t('.title')
   div(data-vue='ExpressionsForm' data-vue-expression-id:number="#{params[:id]}")
 
 .mb-12
