--- a/app/views/expressions/new.html.slim
+++ b/app/views/expressions/new.html.slim
@@ -1,2 +1,4 @@
 .py-20.lg:pt-14.max-w-800.w-full.mx-auto
+  h1.text-xl.font-bold.mb-10.border-b.border-neutral-400.pl-2
+    = t('.title')
   div(data-vue='ExpressionsForm')
