--- a/app/views/quizzes/show.html.slim
+++ b/app/views/quizzes/show.html.slim
@@ -1,2 +1,4 @@
-.bg-white.pt-20.pb-14.max-w-800.w-full.mx-auto
+.bg-white.pt-16.pb-14.max-w-800.w-full.mx-auto
+  h1.text-2xl.font-bold.mb-10.border-b.border-neutral-400.pl-2
+    = t('.title')
   div(data-vue='WordQuiz' data-vue-path='/api/quiz')
