--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,4 +1,4 @@
-.bg-white.pt-16.pb-24.rounded-sm.max-w-800.w-full.mx-auto
+.bg-white.pt-10.pb-24.max-w-800.w-full.mx-auto
   p.text-green-700.pl-5.font-bold
     = notice
   .error.text-center.pb-4
@@ -8,6 +8,8 @@
       = alert
 
   div class=error_or_not(alert)
+    h1.text-2xl.font-bold.mb-10.border-b.border-neutral-400.pl-2
+      = t('.title')
     = render 'shared/page_tabs'
     .sm:px-7.py-6.bg-lavender-600
       .h-80.px-3.sm:px-0
