--- a/app/views/expressions/show.html.slim
+++ b/app/views/expressions/show.html.slim
@@ -1,3 +1,6 @@
+- title '英単語・フレーズの詳細'
+- description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupの英単語・フレーズの詳細ページ'
+
 .specific-expression.py-20.px-2.max-w-800.w-full.mx-auto
   p.text-green-700.pl-5.font-bold
     = notice
