--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,8 +2,7 @@ doctype html
 html
   head
     = render 'shared/google_analytics' if Rails.env.production?
-    title
-      | WordWarmup
+    = display_meta_tags default_meta_tags
     meta[name='viewport' content='width=device-width,initial-scale=1']
     = csrf_meta_tags
     = csp_meta_tag
