--- a/app/views/bookmarked_expressions/index.html.slim
+++ b/app/views/bookmarked_expressions/index.html.slim
@@ -1,3 +1,6 @@
+- title 'ブックマーク一覧'
+- description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupのブックマークの一覧ページ'
+
 .bg-white.pt-10.pb-24.max-w-800.w-full.mx-auto
   p.text-green-700.pl-5.pb-6.font-bold
     = notice
