--- a/app/views/bookmarked_expressions/quizzes/show.html.slim
+++ b/app/views/bookmarked_expressions/quizzes/show.html.slim
@@ -1,3 +1,6 @@
+- title 'クイズ（ブックマーク）'
+- description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupのブックマークに保存されている英単語・フレーズのクイズページ'
+
 .bg-white.pt-16.pb-14.max-w-800.w-full.mx-auto
   h1.text-2xl.font-bold.mb-10.border-b.border-neutral-400.pl-2
     = t('.title')
