--- a/app/views/expressions/new.html.slim
+++ b/app/views/expressions/new.html.slim
@@ -1,3 +1,6 @@
+- title '英単語・フレーズの新規作成'
+- description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupの英単語・フレーズの新規作成ページ'
+
 .py-20.lg:pt-14.max-w-800.w-full.mx-auto
   h1.text-xl.font-bold.mb-10.border-b.border-neutral-400.pl-2
     = t('.title')
