--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,3 +1,6 @@
+- title '英単語・フレーズの一覧'
+- description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupの英単語・フレーズの一覧ページ'
+
 .bg-white.pt-10.pb-24.max-w-800.w-full.mx-auto
   p.text-green-700.pl-5.font-bold
     = notice
