--- a/app/views/welcome/privacy_policy.html.slim
+++ b/app/views/welcome/privacy_policy.html.slim
@@ -1,3 +1,6 @@
+- title 'プライバシーポリシー'
+- description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupのプライバシーポリシー'
+
 .max-w-800.w-full.mx-auto.px-4.sm:px-6.py-16.bg-white
   h1.font-black.text-2xl.text-center プライバシーポリシー
   p.py-8 本ウェブサイト上で提供するサービス（以下,「本サービス」といいます。）における，ユーザーの個人情報の取扱いについて，以下のとおりプライバシーポリシー（以下，「本ポリシー」といいます。）を定めます。
