--- a/app/views/welcome/terms_of_service.html.slim
+++ b/app/views/welcome/terms_of_service.html.slim
@@ -1,3 +1,6 @@
+- title '利用規約'
+- description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupの利用規約'
+
 .max-w-800.w-full.mx-auto.px-4.sm:px-6.py-16.bg-white
   h1.font-black.text-2xl.text-center 利用規約
   p.py-8 この利用規約（以下、「本規約」といいます。）は、このウェブサイト上で提供するサービス（以下、「本サービス」といいます。）の利用条件を定めるものです。本サービスを利用する全てのユーザーの皆さま（以下、「ユーザー」といいます。）には、本規約に従って、本サービスをご利用いただきます。
