--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -18,7 +18,7 @@
         h1.font-bold.mx-5.text-2xl.leading-9
           = t('.target')
       .flex.justify-center.my-5
-        = image_tag('word-warmup.svg')
+        = image_tag('word-warmup.svg', alt: 'Word Warmupのロゴ')
 
     .py-14.bg-lavender-50.flex.justify-center
       .max-w-800
