--- a/app/views/welcome/privacy_policy.html.slim
+++ b/app/views/welcome/privacy_policy.html.slim
@@ -30,7 +30,7 @@
   h2.font-bold.text-lg.border-b.border-gray-300 アクセス解析ツール
   p.pt-6 本サービスは、お客様のアクセス解析のために、「Googleアナリティクス」を利用しています。Googleアナリティクスは、トラフィックデータの収集のためにCookieを使用しています。トラフィックデータは匿名で収集されており、個人を特定するものではありません。Cookieを無効にすれば、これらの情報の収集を拒否することができます。詳しくはお使いのブラウザの設定をご確認ください。Googleアナリティクスについて、詳しくは以下からご確認ください。
   .pt-3.pb-6.text-lavender-800
-    a.underline.decoration-lavender-800 href='https://marketingplatform.google.com/about/analytics/terms/jp/' Googleアナリティクスの利用規約
+    a.underline.decoration-lavender-800.hover:opacity-70 href='https://marketingplatform.google.com/about/analytics/terms/jp/' Googleアナリティクスの利用規約
   h2.font-bold.text-lg.border-b.border-gray-300 プライバシーポリシーの変更
   p.py-6 本ポリシーの内容は，法令その他本ポリシーに別段の定めのある事項を除いて，ユーザーに通知することなく，変更することができるものとします。また本サービスが別途定める場合を除いて，変更後のプライバシーポリシーは，本ウェブサイトに掲載したときから効力を生じるものとします。
   h2.font-bold.text-lg.border-b.border-gray-300 お問い合わせ
