--- a/app/views/expressions/show.html.slim
+++ b/app/views/expressions/show.html.slim
@@ -1,46 +1,50 @@
 - title '英単語・フレーズの詳細'
 - description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupの英単語・フレーズの詳細ページ'
 
-.specific-expression.py-20.px-2.max-w-800.w-full.mx-auto
-  p.text-green-700.pl-5.font-bold
+.specific-expression.pt-24.lg:pt-20.pb-20.px-2.max-w-800.w-full.mx-auto
+  p.text-green-700.pb-3.font-bold
     = notice
 
-  .title.bg-lavender-50.p-2.rounded-md
-    h1.text-lg
-      = t('.title')
-    .font-semibold.text-lg
+  .title.border-b.border-b-lavender-600.leading-9
+    h1.flex.flex-wrap
       - @expression.expression_items.order(:created_at, :id).each_with_index do |expression_item, i|
-        p #{i + 1}. #{expression_item.content}
-  .details.bg-lavender-600.mt-10.p-2
-    - @expression.expression_items.order(:created_at, :id).each_with_index do |expression_item, i|
-      div class="expression#{i} bg-white p-3 my-3"
-        p.content.font-bold.text-lg.border-b-2.border-neutral-400.mb-3.5
+        span.text-2xl.font-bold.text-darklavender-800.inline-block.tracking-wide.pr-3
           = expression_item.content
-        p.underline
-          = t('.explanation')
-        p.explanation
-          = expression_item.explanation
-        - if expression_item.examples.present?
-          p.mt-3.underline
-            = t('.example')
-          - expression_item.examples.order(:created_at, :id).each do |example|
-            p.example.border-b.border-neutral-400
-              = example.content
+        - if @expression.expression_items.order(:created_at, :id)[i + 1]
+          span.pr-3
+            = t('.and')
+      = t('.about_differences')
+  .details
+    - @expression.expression_items.order(:created_at, :id).each_with_index do |expression_item, i|
+      article class="expression#{i} bg-lavender-50 border-lavender-600 border px-4 py-3 mt-8"
+        h2.content.font-bold.text-xl.border-b.border-lavender-600.mb-2.pb-2.text-darklavender-800
+          = expression_item.content
+        dl
+          dt.font-semibold.text-sm
+            = t('.explanation')
+          dd.explanation
+            = expression_item.explanation
+          - if expression_item.examples.present?
+            dt.mt-3.font-semibold.text-sm
+              = t('.example')
+            - expression_item.examples.order(:created_at, :id).each do |example|
+              dd.example
+                = example.content
   - if @expression.note.present? || @expression.tags.present?
-    .border-2.border-lavender-600.rounded-md.mt-6.p-2
+    .border.border-lavender-600.mt-6.p-2
       - if @expression.note.present?
-        .note.my-1.bg-golden-yellow-50.p-2
-          p.font-semibold
+        dl.note.my-1.bg-golden-yellow-50.p-2
+          dt.font-semibold
             = t('.note')
-          p
+          dd
             = @expression.note
       - if @expression.tags.present?
-        .tag.mt-2
-          p
+        dl.tag.my-1.p-2
+          dt.font-semibold
             = t('.tag')
           .flex.flex-row.flex-wrap
             - @expression.tags.order('taggings.created_at').each do |tag|
-              p.m-1.px-2.bg-golden-yellow-400.rounded.w-fit
+              dd.mr-2.px-2.bg-golden-yellow-400.rounded.w-fit
                 = tag.name
 
   .flex.flex-row.justify-end.p-3.text-neutral-700
@@ -50,17 +54,17 @@
   .grid.grid-cols-2.mt-10.h-6.relative
     - if @expression.previous(@user)
       .text-center
-        = link_to expression_path(@expression.previous(@user)), id: 'previous', class: 'hover:text-neutral-400' do
-          i class="fa-solid fa-angle-left fa-2xl"
+        = link_to expression_path(@expression.previous(@user)), id: 'previous', class: 'hover:opacity-50' do
+          i class="fa-solid fa-angle-left fa-2xl" style="color: #8d628d;"
     - if @expression.next(@user)
       .absolute.right-0.top-0.w-1/2
         .text-center
-          = link_to expression_path(@expression.next(@user)), id: 'next', class: 'hover:text-neutral-400' do
-            i class="fa-solid fa-angle-right fa-2xl"
-  .text-center.pt-10
+          = link_to expression_path(@expression.next(@user)), id: 'next', class: 'hover:opacity-50' do
+            i class="fa-solid fa-angle-right fa-2xl" style="color: #8d628d;"
+  .text-center.pt-10.text-darklavender-800
     - if @expression.bookmarking?
-      = link_to t('.go_to_index'), bookmarked_expressions_path, class: 'hover:text-neutral-400'
+      = link_to t('.go_to_index'), bookmarked_expressions_path, class: 'hover:opacity-50'
     - elsif @expression.memorising?
-      = link_to t('.go_to_index'), memorised_expressions_path, class: 'hover:text-neutral-400'
+      = link_to t('.go_to_index'), memorised_expressions_path, class: 'hover:opacity-50'
     - else
-      = link_to t('.go_to_index'), home_path, class: 'hover:text-neutral-400'
+      = link_to t('.go_to_index'), home_path, class: 'hover:opacity-50'
