--- a/app/views/shared/_page_tabs.html.slim
+++ b/app/views/shared/_page_tabs.html.slim
@@ -1,8 +1,8 @@
-.page_tabs.px-2.sm:px-7.pb-4
-  ul.flex.flex-row.font-semibold.text-center.text-sm.sm:text-base
+.page_tabs.pb-4.flex.justify-center
+  ul.flex.flex-row.font-semibold.text-center.text-sm.sm:text-base.text-darklavender-600
     li.sm:w-40.sm:tracking-wider.mr-2
-      = link_to t('words_and_phrases'), home_path, class: "words-and-phrases-link inline-block px-2 py-1 h-full w-full bg-lavender-50 xl:hover:bg-lavender-600 rounded-full #{current_page_tab_or_not('home')}"
+      = link_to t('words_and_phrases'), home_path, class: "words-and-phrases-link inline-block px-2 py-1 h-full w-full hover:bg-lavender-50 hover:text-darklavender-800 border-lavender-600 border rounded-full #{current_page_tab_or_not('home')}"
     li.sm:w-40.sm:tracking-wider.mr-2
-      = link_to t('bookmark'), bookmarked_expressions_path, class: "inline-block px-2 py-1 h-full w-full bg-lavender-50 xl:hover:bg-lavender-600 rounded-full #{current_page_tab_or_not('bookmarked_expressions')}"
+      = link_to t('bookmark'), bookmarked_expressions_path, class: "inline-block px-2 py-1 h-full w-full hover:bg-lavender-50 hover:text-darklavender-800 border-lavender-600 border rounded-full #{current_page_tab_or_not('bookmarked_expressions')}"
     li.sm:w-40.sm:tracking-wider
-      = link_to t('memorised_list'), memorised_expressions_path, class: "memorised-list-link inline-block px-2 py-1 h-full w-full bg-lavender-50 rounded-full xl:hover:bg-lavender-600 #{current_page_tab_or_not('memorised_expressions')}"
+      = link_to t('memorised_list'), memorised_expressions_path, class: "memorised-list-link inline-block px-2 py-1 h-full w-full hover:bg-lavender-50 hover:text-darklavender-800 border-lavender-600 border rounded-full #{current_page_tab_or_not('memorised_expressions')}"
