--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,83 +1,90 @@
 - title '間違いやすい英単語やフレーズの学習をサポートするツール'
 
-.welcome.bg-white.py-16.mx-auto
-  p.text-green-700.pl-8.pb-5.font-bold.text-lg.max-w-800.mx-auto
-    = notice
+.welcome.bg-white.mx-auto
+  .bg-lavender-600
+    - if notice
+      p.text-green-700.pl-8.pt-5.font-bold.text-lg.max-w-800.mx-auto
+        = notice
   - if alert
-    .error.text-center.pb-16.flex.justify-center
+    .error.text-center.py-16.flex.justify-center
       .max-w-800
         i class="fa-solid fa-circle-exclamation fa-xl pr-1 text-red-600"
         p.font-semibold.inline-block.text-xl
           = alert
         - if alert == 'ログインが必要です'
-          = button_to 'Sign up/Log in with Google', '/auth/google_oauth2', method: :post, data: { turbo: false }, class: 'text-lavender-800 hover:bg-lavender-50 border-2 border-lavender-800 rounded-full font-bold px-3 mt-1.5'
+          = button_to 'Sign up / Log in with Google', '/auth/google_oauth2', method: :post, data: { turbo: false }, class: 'text-lavender-800 hover:bg-lavender-50 border-2 border-lavender-800 rounded font-bold px-3 mt-1.5'
 
   div class=error_or_not(alert)
-    .max-w-800.mx-auto
-      .flex.justify-center
-        h1.font-bold.mx-5.text-2xl.leading-9
-          = t('.target')
-      .flex.justify-center.my-5
-        = image_tag('word-warmup.svg', alt: 'Word Warmupのロゴ')
+    .bg-lavender-600
+      .max-w-800.mx-auto
+        .flex.justify-center
+          = image_tag('word-warmup.svg', alt: 'Word Warmupのロゴ')
+        .flex.justify-center
+          h1.font-bold.mx-5.text-2xl.leading-9.text-center
+            = t('.target')
+        .flex.justify-center.py-14.first-login-button
+          = button_to 'Sign up / Log in with Google', '/auth/google_oauth2', method: :post, data: { turbo: false }, class: 'font-medium text-sm md:text-lg bg-black-900 hover:bg-white text-white hover:text-darklavender-600 px-5 py-2 rounded'
 
-    .py-14.bg-lavender-50.flex.justify-center
+    .py-14.flex.justify-center
       .max-w-800
-        h2.text-2xl.font-semibold.mx-2.bg-golden-yellow-50.rounded.py-1.text-center
+        h2.text-2xl.font-bold.text-center.relative.top-0.left-0
           = t('.about_word_warmup')
-        ol.font-semibold.px-5.lg:mx-10
-          li.mt-11
-            p.text-xl.flex.justify-center
-              | 1.
-              = t('.function1')
-            .flex.justify-center.py-4
-              i class="fa-solid fa-pen-to-square fa-4x" style="color: #ffd12a;"
-            p.font-normal
-              = t('.detail_of_function1')
-          li.mt-11
-            p.text-xl.flex.justify-center
-              | 2.
-              = t('.function2')
-            .flex.justify-center.py-4
-              i class="fa-solid fa-spell-check fa-4x" style="color: #ffd12a;"
-            p.font-normal.sm:text-center
-              = t('.detail_of_function2')
-          li.mt-11
-            p.text-xl.flex.justify-center
-              | 3.
-              = t('.function3')
-            .flex.justify-center.py-4
-              i class="fa-solid fa-book-bookmark fa-4x" style="color: #ffd12a;"
-            p.font-normal
-              = t('.detail_of_function3')
-          li.mt-11
-            .md:text-center.flex.justify-center
-              p.inline-block.text-xl.max-w-xl
-                | 4.
-                = t('.function4')
-            .flex.justify-center.py-4
-              i class="fa-solid fa-book-open fa-4x" style="color: #ffd12a;"
-            p.font-normal
-              = t('.detail_of_function4')
-            p.font-normal
-              = t('.after_login')
-    .grid
-      .md:border-lavender-600.md:border-2.md:rounded.py-10.px-5.md:mx-10.md:mt-16.max-w-800.justify-self-center
-        p.text-xl.font-semibold.text-center
+          span class="before:absolute before:-bottom-4 before:left-0 before:right-0 before:m-auto before:content-[''] before:w-24 before:border-b-[6px] before:border-lavender-600"
+        .flex.justify-center
+          ol class="font-bold lg:mx-10 pt-8 [counter-reset:section] list-none sm:w-9/12 px-5 sm:px-0"
+            li class="before:content-['1'] before:italic mt-11 relative before:absolute before:inline-block before:bg-lavender-600 leading-6 p-2 before:rounded-full before:w-14 before:h-14 before:text-center before:leading-[56px] before:text-2xl before:mr-10 before:left-0 pl-20"
+              h3.text-xl.flex.items-center.h-14
+                = t('.function1')
+              p.font-normal.py-4
+                = t('.detail_of_function1')
+            li class="mt-11 before:content-['2'] before:italic relative before:absolute before:inline-block before:bg-lavender-600 leading-6 p-2 before:rounded-full before:w-14 before:h-14 before:leading-[56px] before:text-2xl before:text-center before:mr-10 before:left-0 pl-20"
+              h3.text-xl.flex.items-center.h-14
+                = t('.function2')
+              p.font-normal.py-4
+                = t('.detail_of_function2')
+            li class="mt-11 before:content-['3'] before:italic relative before:absolute before:inline-block before:bg-lavender-600 leading-6 p-2 before:rounded-full before:w-14 before:h-14 before:leading-[56px] before:text-2xl before:text-center before:mr-10 before:left-0 pl-20"
+              h3.text-xl.flex.items-center.h-14
+                = t('.function3')
+              p.font-normal.py-4
+                = t('.detail_of_function3')
+    .without-login.bg-lavender-50.flex.justify-center
+      .max-w-800.py-8
+        h3.text-xl.font-semibold.text-center
+          .inline-block.max-w-xl
+            = t('.function4')
+        p.font-normal.text-center.py-5.px-3
+          = t('.detail_of_function4')
+        .flex.justify-center
+          = link_to t('.try_app'), home_path, class: 'inline-block w-72 font-bold text-lg py-2 mt-3 bg-black-900 hover:bg-white text-white hover:text-darklavender-600 text-center rounded'
+        p.font-normal.text-sm.text-center.pt-3
+          = t('.limitation_of_functions')
+    .recommended-users.py-14.flex.justify-center
+      .max-w-800
+        h2.text-2xl.font-semibold.text-center.relative.top-0.left-0
           = t('.target_user')
-        ul.list-disc.pl-4.my-5
-          li.mb-2
-            = t('.user1')
-          li.mb-2
-            = t('.user2')
-          li.mb-2
-            = t('.user3')
-          li
-            = t('.user4')
-
-    .w-11/12.md:flex.md:flex-row.mx-auto.md:mt-10.max-w-800.md:pt-5
-      .md:basis-1/2.text-center.md:ml-7.md:mr-3
-        p.font-semibold.text-sm
-          = t('.cost')
-        = button_to 'Sign up/Log in with Google', '/auth/google_oauth2', method: :post, data: { turbo: false }, class: 'w-full font-bold text-lg py-2 rounded-full bg-lavender-800 hover:bg-lavender-600 text-white'
-      .md:basis-1/2.text-center.tracking-widest.mt-5.md:mt-0.md:ml-3.md:mr-7.flex.items-end
-        = link_to t('.try_app'), home_path, class: 'inline-block w-full font-bold text-lg py-2 rounded-full bg-lavender-800 hover:bg-lavender-600 text-white'
+          span class="before:absolute before:-bottom-4 before:left-0 before:right-0 before:m-auto before:content-[''] before:w-24 before:border-b-[6px] before:border-lavender-600"
+        .flex.justify-center
+          ul.list-disc.pl-4.pt-20.pb-5.md:pb-10.w-4/5.lg:2/3
+            li.mb-2
+              = t('.user1')
+            li.mb-2
+              = t('.user2')
+            li.mb-2
+              = t('.user3')
+            li
+              = t('.user4')
+        .flex.flex-row.justify-end
+          .basis-1/2.flex.justify-center
+            .relative
+              i class="fa-solid fa-face-dizzy fa-5x pt-5"
+              span class="before:absolute before:-top-7 before:-left-28 before:w-14 before:h-8 before:bg-lavender-600 before:rounded-half"
+              span class="before:absolute before:top-2.5 before:-left-20 before:w-10 before:h-6 before:bg-lavender-600 before:rounded-half"
+              span class="before:absolute before:top-10 before:-left-12 before:w-7 before:h-4 before:bg-lavender-600 before:rounded-half"
+        .w-11/12.md:flex.md:flex-row.mx-auto.mt-10
+          .md:basis-1/2.text-center.md:ml-7.md:mr-3
+            p.font-semibold.text-sm
+              = t('.cost')
+            .last-login-button
+              = button_to 'Sign up / Log in with Google', '/auth/google_oauth2', method: :post, data: { turbo: false }, class: 'w-full font-bold text-lg py-2 bg-black-900 hover:bg-white text-white hover:text-darklavender-600 border border-black-900 hover:border-darklavender-600 rounded'
+          .md:basis-1/2.text-center.tracking-widest.mt-5.md:mt-0.md:ml-3.md:mr-7.flex.items-end
+            = link_to t('.try_app'), home_path, class: 'inline-block w-full font-bold text-lg py-2 bg-black-900 hover:bg-white text-white hover:text-darklavender-600 border border-black-900 hover:border-darklavender-600 rounded'
