--- a/app/views/expressions/edit.html.slim
+++ b/app/views/expressions/edit.html.slim
@@ -2,6 +2,8 @@
 - description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupの英単語・フレーズの編集ページ'
 
 .pt-24.lg:pt-20.pb-12.lg:pt-14.max-w-800.w-full.mx-auto
+  p.text-green-700.font-bold.pt-1.pb-3
+    = notice
   h1.text-xl.font-bold.mb-10.border-b.border-lavender-600.pb-2.mx-2.sm:mx-0
     = t('.title')
   div(data-vue='ExpressionsForm' data-vue-expression-id:number="#{params[:id]}")
