--- a/app/views/memorised_expressions/quizzes/show.html.slim
+++ b/app/views/memorised_expressions/quizzes/show.html.slim
@@ -1,4 +1,4 @@
-- title 'クイズ（覚えた語彙一覧）'
+- title t('.browser_title')
 - description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupの覚えた語彙一覧に保存されている英単語・フレーズのクイズページ'
 
 .bg-white.pt-24.lg:pt-16.pb-14.max-w-800.w-full.mx-auto
