--- a/app/views/quizzes/show.html.slim
+++ b/app/views/quizzes/show.html.slim
@@ -1,4 +1,4 @@
-- title 'クイズ'
+- title t('.browser_title')
 - description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupのクイズページ'
 
 .bg-white.pt-24.lg:pt-16.pb-14.max-w-800.w-full.mx-auto
