--- a/app/views/bookmarked_expressions/index.html.slim
+++ b/app/views/bookmarked_expressions/index.html.slim
@@ -1,4 +1,4 @@
-- title 'ブックマーク一覧'
+- title t('.browser_title')
 - description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupのブックマークの一覧ページ'
 
 .bg-white.pt-16.lg:pt-10.pb-24.max-w-800.w-full.mx-auto.px-2
