--- a/app/views/expressions/new.html.slim
+++ b/app/views/expressions/new.html.slim
@@ -1,4 +1,4 @@
-- title '英単語・フレーズの新規作成'
+- title t('.browser_title')
 - description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupの英単語・フレーズの新規作成ページ'
 
 .pt-24.lg:pt-20.pb-20.max-w-800.w-full.mx-auto
