--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,4 +1,4 @@
-- title '英単語・フレーズの一覧'
+- title t('.browser_title')
 - description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupの英単語・フレーズの一覧ページ'
 
 .bg-white.pt-16.lg:pt-10.pb-24.max-w-800.w-full.mx-auto.px-2
