--- a/app/views/welcome/privacy_policy.html.slim
+++ b/app/views/welcome/privacy_policy.html.slim
@@ -1,4 +1,4 @@
-- title 'プライバシーポリシー'
+- title t('.browser_title')
 - description '間違いやすい英単語やフレーズの学習をサポートするツールWord Warmupのプライバシーポリシー'
 
 .max-w-800.w-full.mx-auto.px-4.sm:px-6.py-16.bg-white
